--- a/index.html
+++ b/index.html
@@ -2,13 +2,107 @@
 <html lang="pt-br">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="author" content="Micaelly Matos Cassimiro" />
 		<meta name="description" content="TCC | Micaelly Matos Cassimiro"/>
-		<link href="styles/style.css" rel="stylesheet" type="text/css" />
+		<link rel="shortcut icon" href="media/icon-log-ifb-default.svg" type="image/x-icon">
 		<title>CAAA - Controle de Atendimento ao Aluno | IFBCBRA</title>
+		<!-- Google fonts -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Inter:wght@100..900&family=Oleo+Script+Swash+Caps:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+		<!-- CSS Bootstrap -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+		<!-- Icons Bootstrap -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+		<!-- CSS do projeto -->
+		<link href="styles/style.css" rel="stylesheet" type="text/css" />
+		<!-- JS Bootstrap -->
+		<script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+		<script defer src="scripts/script.js"></script>
 	</head>
 	<body>
+		<nav class="navbar bg-body-secundary">
+			<div class="d-flex align-items-center">
+				<a class="navbar-brand" href="#meu-perfil">
+					<img src="/media/navbar/img-profile.png" class="d-inline-block" id="img-profile" alt="imagem contendo um icone de perfil do usuário"/>
+				</a>
+				
+				<a class="navbar-brand d-inline-block" href="index.html" id="title-navbar">Controle de Atendimento ao Aluno</a>
+			</div>
 		
+			<a class="navbar-brand" href="https://www.ifb.edu.br/" target="_blank"> 
+				<img src="media/navbar/img-logo-IFB-horizontal-dark.png" class="d-inline-block" id="logo-IFB-horizontal" alt="Imagem contendo a logo do Instituto Fedral de Brasília - Campus Brasília no tema escuro"/>
+			</a>
+		</nav>
+
+		<main class="bg-body-primary">
+			<h1 id="title-modalidade" class="text-center ">SELECIONE A MODALIDADE DO CURSO:</h1>
+			<div class="container">
+				<div class="row justify-content-center align-items-center">
+					<div class="col-md-3 mb-3">
+						<div class="card text-center">
+							<img src="media/container-cards-modalidades/img-card-1.svg" class="card-img-top" alt="Imagem do Card da modalidade: Técnicos Integrados ao Ensino Médio" />
+							<div class="card-body d-flex align-items-center">
+								<h6 class="card-title">Técnicos Integrados ao Ensino Médio</h6>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 mb-3">
+						<div class="card text-center ">
+							<img src="media/container-cards-modalidades/img-card-2.svg" class="card-img-top" alt="Imagem do Card da modalidade: Técnicos Subsequentes"/>
+							<div class="card-body d-flex align-items-center">
+								<h6 class="card-title ">Técnicos Subsequentes</h6>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 mb-3">
+						<div class="card text-center">
+							<img src="media/container-cards-modalidades/img-card-3.svg" class="card-img-top" alt="Imagem do Card da modalidade: Superiores - Graduação"/>
+							<div class="card-body d-flex align-items-center">
+								<h6 class="card-title">Superiores - Graduação</h6>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="row justify-content-center align-items-center">
+					<div class="col-md-3 mb-3">
+						<div class="card text-center">
+							<img src="media/container-cards-modalidades/img-card-4.svg" class="card-img-top" alt="Imagem do Card da modalidade: Superiores - Especialização e Mestrado"/>
+							<div class="card-body d-flex align-items-center">
+								<h6 class="card-title">Superiores - Especialização e Mestrado</h6>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 mb-3">
+						<div class="card text-center">
+							<img src="media/container-cards-modalidades/img-card-5.svg" class="card-img-top" alt="Imagem do Card da modalidade: Formação Inicial e Continuada (FIC)"/>
+							<div class="card-body d-flex align-items-center">
+								<h6 class="card-title">Formação Inicial e Continuada (FIC)</h6>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 mb-3">
+						<div class="card text-center">
+							<img src="media/container-cards-modalidades/img-card-6.svg" class="card-img-top" alt="Imagem do Card da modalidade: Distância(EAD)"/>
+							<div class="card-body d-flex align-items-center">
+								<h6 class="card-title">Distância(EAD)</h6>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</main>
+
+		  <footer class="bg-body-secundary text-lg-start fixed-bottom">
+			<div class="text-footer p-3">Desenvolvido por:
+			  <a id="a-text-footer" target="_blank" href="https://www.linkedin.com/in/micaelly-matos-cassimiro-67168b224/">Micaelly Matos Cassimiro</a>
+			</div>
+		  </footer>
 	</body>
 </html>     
